manifests/axion-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-ui
  namespace: vivek
spec:
  selector:
    matchLabels:
      app: axion-ui
  template:
    metadata:
      labels:
        app: axion-ui
    spec:
      containers:
      - name: axion-ui
        image: clusteraliregistry.azurecr.io/axion-ui:v24
        ports:
        - containerPort: 80
