manifests/axion-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-ui-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: axion-ui
  type: ClusterIP
