manifests/axion-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ui-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: kulphi.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: axion-ui-service
            port: 
              number: 80
